Front text removed and tags centered

--- a/css/gsla-proto.webflow.css
+++ b/css/gsla-proto.webflow.css
@@ -3188,6 +3188,10 @@ blockquote {
   margin-bottom: 0px;
 }
 
+.icon-centered{
+  text-align: center !important;
+}
+
 .anchor-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
